<resources>
    <string name="app_name">RecipeMaster</string>
    <string name="_60k">60K+ </string>
    <string name="premium_recipes">Premium recipes</string>
    <string name="lets_cooking">Let\'s\nCooking</string>
    <string name="find_best_recipes_for_cooking">Find best recipes for cooking</string>
    <string name="start_cooking">Start Cooking</string>
    <string name="see_all">See all</string>
    <string name="trending_now">Trending Now 🔥</string>
    <string name="search_recipes">Search recipes</string>
    <string name="_4_5">" 4.5"</string>
    <string name="title_content">Title Content</string>
    <string name="icon_saved">icon saved</string>
    <string name="icon_more">icon more</string>
    <string name="cirlce_image_user">cirlce image user</string>
    <string name="by_user">By User</string>
    <string name="popular_category">Popular Category</string>
    <string name="category_name">Category Name</string>
    <string name="recent_recipe">Recent recipe</string>
    <string name="by_fernand_jerico">By Fernand Jerico</string>
    <string name="popular_creators">Popular Creators</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fab">FAB</string>
    <string name="saved_recipes">Saved recipes</string>
    <string name="video">Video</string>
    <string name="recipe">Recipe</string>
    <string name="time">Time</string>
    <string name="pepper_sweetcorn_ramen">Pepper sweetcorn ramen</string>
    <string name="_10_mins">10 Mins</string>
    <string name="back">Back</string>
    <string name="title_recipe">Title Recipe</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="_300_reviews">(300 Reviews)</string>
    <string name="icon_star">Icon Star</string>
    <string name="author">Author</string>
    <string name="icon_location">Icon Location</string>
    <string name="location_author">Location Author</string>
    <string name="follow">Follow</string>
    <string name="ingredients">Ingredients</string>
    <string name="_5_items">5 Items</string>
    <string name="ingredients_weight">Ingredients Weight</string>
    <string name="time_cooking">Time Cooking</string>
    <string name="icon_edit_photo">Icon Edit Photo</string>
    <string name="enter_your_recipe_title">Enter Your Recipe Title</string>
    <string name="amount">Amount</string>
    <string name="button">Button</string>
    <string name="serves">Serves</string>
    <string name="cook_time">Cook Time</string>
    <string name="serves_size">Serves Size</string>
    <string name="time_cook">Time Cook</string>
    <string name="add_remove_ingredient">Add/Remove Ingredient</string>
    <string name="item_name">Item name</string>
    <string name="quantity">Quantity</string>
    <string name="add_new_ingredient">Add new ingredient</string>
    <string name="add_new_ingredients">Add new ingredients</string>
    <string name="save_my_recipes">Save my recipes</string>
    <string name="background_onboarding">Background Onboarding</string>
    <string name="notifications">Notifications</string>
    <string name="icon_filter">Icon Filter</string>
    <string name="all">All</string>
    <string name="read">Read</string>
    <string name="unread">Unread</string>
    <string name="icon_paper">Icon Paper</string>
    <string name="notification_title">Notification Title</string>
    <string name="notification_body">Notification Body Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pulvinar in nulla vestibulum bibendum. Nullam dolor lorem, vehicula a eros tristique, semper imperdiet ligula.</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="my_profile">My profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_name">Fernand Jerico</string>
    <string name="profile_body">Hello world I’m Fernand Jerico, I’m from Italy 🇮🇹 I love cooking so much!</string>
    <string name="_3">3</string>
    <string name="videos">Videos</string>
    <string name="_13">13</string>
    <string name="followers">Followers</string>
    <string name="_14k">14K</string>
    <string name="following">Following</string>
    <string name="_120">120</string>
    <string name="_12_ingredients_40_minute">12 Ingredients | 40 Minute</string>
    <string name="recipes">Recipes</string>
    <string name="logo">Logo</string>
    <string name="recipe_master">Recipe Master</string>
</resources>