<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.OnboardingActivity">

    <ImageView
        android:id="@+id/background_onboarding"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/onboarding"
        android:contentDescription="@string/background_onboarding"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_overlay" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="14dp"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star"
            android:contentDescription="@string/icon_star"/>

        <TextView
            style="@style/Paragraph.Bold"
            android:text="@string/_60k"
            android:textColor="@android:color/white"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="2dp"/>

        <TextView
            style="@style/Paragraph.Regular"
            android:text="@string/premium_recipes"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom|center_horizontal" >

        <TextView
            style="@style/Heading.Bold.White"
            android:text="@string/lets_cooking"
            android:textAlignment="center"/>

        <TextView
            style="@style/Paragraph.Regular"
            android:textColor="@android:color/white"
            android:layout_marginTop="24dp"
            android:text="@string/find_best_recipes_for_cooking" />

        <Button
            android:id="@+id/btn_start_cooking"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="48dp"
            android:paddingHorizontal="32dp"
            android:paddingVertical="12dp"
            android:text="@string/start_cooking"
            style="@style/Paragraph.Bold"
            android:drawableEnd="@drawable/arrow_forward"
            android:background="@drawable/button_background"/>
    </LinearLayout>

</FrameLayout>