<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.Profile"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp">

            <TextView
                style="@style/Heading4.Bold"
                android:textColor="@color/primaryTextColor"
                android:text="@string/my_profile"
                android:layout_gravity="center"/>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_more_horiz"
                android:background="@color/white"
                android:contentDescription="@string/icon_more"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/onboarding"/>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                android:layout_gravity="center"
                android:background="@drawable/button_background"/>
        </LinearLayout>
        
        <TextView
            style="@style/Heading5.Bold"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/profile_name"
            android:textColor="@color/neutral90Color"/>

        <TextView
            style="@style/Label.Regular"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="12dp"
            android:text="@string/profile_body"
            android:textColor="@color/neutral40Color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:weightSum="4"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
    
                <TextView
                    style="@style/Small.Regular"
                    android:text="@string/recipes"
                    android:textColor="@color/neutral40Color"/>

                <TextView
                    style="@style/Heading5.Bold"
                    android:text="@string/_3"
                    android:textColor="@color/neutral90Color"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">

                <TextView
                    style="@style/Small.Regular"
                    android:text="@string/videos"
                    android:textColor="@color/neutral40Color"/>

                <TextView
                    style="@style/Heading5.Bold"
                    android:text="@string/_13"
                    android:layout_gravity="center"
                    android:textColor="@color/neutral90Color"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">

                <TextView
                    style="@style/Small.Regular"
                    android:text="@string/followers"
                    android:textColor="@color/neutral40Color"/>

                <TextView
                    style="@style/Heading5.Bold"
                    android:text="@string/_14k"
                    android:layout_gravity="center"
                    android:textColor="@color/neutral90Color"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">

                <TextView
                    style="@style/Small.Regular"
                    android:text="@string/following"
                    android:textColor="@color/neutral40Color"/>

                <TextView
                    style="@style/Heading5.Bold"
                    android:text="@string/_120"
                    android:layout_gravity="center"
                    android:textColor="@color/neutral90Color"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/neutral30Color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:layout_marginTop="12dp">

            <Button
                android:id="@+id/btn_my_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_background_selector"
                android:textColor="@drawable/button_text_selector"/>

            <Button
                android:id="@+id/btn_my_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:background="@drawable/button_background_selector"
                android:textColor="@drawable/button_text_selector"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/fragment_container_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="24dp"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>