<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.RecipeDetailActivity"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/ly_nav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/back"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_margin="16dp"
            app:tint="@color/black"/>

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btn_option"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_more_horiz"
            android:contentDescription="@string/icon_more"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_margin="16dp"
            app:tint="@color/black" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/ly_nav">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">

            <TextView
                style="@style/Heading4.Bold"
                android:id="@+id/tv_recipe_detail_title"
                android:text="@string/title_recipe"
                android:textColor="@color/neutral90Color"/>

            <TextView
                style="@style/Label.Bold"
                android:id="@+id/tv_recipe_detail_time"
                android:text="@string/time_cooking"
                android:textColor="@color/neutral30Color"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/iv_recipe_detail_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/onboarding"
                    android:contentDescription="@string/recipe_image"/>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star"
                    app:tint="@color/ratingColor"
                    android:contentDescription="@string/icon_star"/>

                <TextView
                    style="@style/Label.Bold"
                    android:id="@+id/tv_recipe_detail_rating"
                    android:layout_gravity="center"
                    android:textColor="@color/neutral90Color"
                    android:text="@string/_4_5" />

                <TextView
                    style="@style/Label.Regular"
                    android:layout_marginStart="8dp"
                    android:layout_gravity="center"
                    android:textColor="@color/neutral40Color"
                    android:text="@string/_300_reviews" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal" >

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civ_detail_recipe_author"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/onboarding"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Paragraph.Bold"
                        android:layout_gravity="start"
                        android:textColor="@color/primaryTextColor"
                        android:text="@string/author" />

                    <TextView
                        style="@style/Label.Regular"
                        android:textColor="@color/neutral40Color"
                        android:text="@string/location_author"
                        app:drawableStartCompat="@drawable/ic_location_on"
                        app:drawableTint="@color/primaryColor" />
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    style="@style/Label.Bold"
                    android:background="@drawable/button_background"
                    android:text="@string/follow"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="24dp">

                <TextView
                    style="@style/Heading5.Bold"
                    android:textColor="@color/primaryTextColor"
                    android:text="@string/ingredients" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    style="@style/Label.Regular"
                    android:textColor="@color/neutral40Color"
                    android:text="@string/_5_items" />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_ingredients_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="60dp"
                android:orientation="vertical"
                tools:listitem="@layout/item_ingredients"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>