<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="0dp"
    app:cardCornerRadius="10dp"
    android:layout_marginBottom="16dp">

    <ImageView
        android:id="@+id/iv_img_my_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/onboarding"
        android:scaleType="centerCrop"
        android:contentDescription="@string/title_content" />

    <TextView
        android:id="@+id/tv_rating_my_content"
        android:layout_width="58dp"
        android:layout_height="28dp"
        android:layout_gravity="top|start"
        android:layout_margin="16dp"
        android:background="@drawable/bg_box_rating"
        android:text="@string/_4_5"
        style="@style/Label.Bold"
        android:gravity="center"
        android:textColor="@android:color/white"
        app:drawableStartCompat="@drawable/ic_star"/>

    <ImageButton
        android:id="@+id/ib_my_content_more"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="top|end"
        android:layout_margin="8dp"
        android:background="@drawable/bg_box_saved"
        android:scaleType="center"
        android:src="@drawable/ic_more_horiz"
        android:contentDescription="@string/icon_more" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_my_content_title"
            style="@style/Paragraph.Bold"
            android:textColor="@color/white"
            android:text="@string/title_recipe"
            android:layout_marginEnd="180dp"/>

        <TextView
            android:id="@+id/tv_my_content_body"
            style="@style/Small.Regular"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:text="@string/_12_ingredients_40_minute" />
    </LinearLayout>


</androidx.cardview.widget.CardView>