<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.Notification"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/Heading4.Bold"
                android:textColor="@color/primaryTextColor"
                android:text="@string/notifications"
                android:layout_gravity="center"/>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_filter"
                android:background="@color/white"
                android:contentDescription="@string/icon_filter"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            style="?android:attr/buttonBarStyle">

            <Button
                android:id="@+id/btn_notification_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_background_selector"
                android:textColor="@drawable/button_text_selector" />

            <Button
                android:id="@+id/btn_notification_unread"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unread"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:background="@drawable/button_background_selector"
                android:textColor="@drawable/button_text_selector" />

            <Button
                android:id="@+id/btn_notification_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:background="@drawable/button_background_selector"
                android:textColor="@drawable/button_text_selector" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/fragment_container_notification"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="24dp"
            android:layout_marginTop="16dp"/>
    </LinearLayout>


</androidx.core.widget.NestedScrollView>