<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateRecipeActivity"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/ly_nav_create_recipe"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <ImageButton
            android:id="@+id/btn_create_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/back"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_margin="16dp"
            app:tint="@color/black"/>

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btn_create_option"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_more_horiz"
            android:contentDescription="@string/icon_more"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_margin="16dp"
            app:tint="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/ly_nav_create_recipe">

        <TextView
            android:id="@+id/tv_recipe_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_recipe"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/neutral90Color"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="24dp"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/iv_recipe_detail_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/onboarding"
                android:contentDescription="@string/recipe_image"/>

            <ImageButton
                android:id="@+id/iv_edit_photo"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="top|end"
                android:layout_margin="8dp"
                android:background="@drawable/bg_box_saved"
                android:scaleType="center"
                android:src="@drawable/ic_pencil"
                android:contentDescription="@string/icon_edit_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/enter_your_recipe_title"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxStrokeColor="@color/primaryColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_recipe_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>