<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ly_ingredients_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginVertical="8dp"
    android:paddingBottom="8dp"
    android:gravity="center_vertical"
    android:weightSum="3">

    <!-- Ingredient Name Box -->
    <EditText
        android:id="@+id/et_ingredient_name"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1.8"
        android:hint="@string/item_name"
        android:inputType="text"
        android:textSize="16sp"
        android:background="@drawable/edittext_rounded"
        android:padding="8dp"
        android:textColorHint="@color/neutral40Color"
        android:layout_marginEnd="8dp"/>

    <!-- Ingredient Weight Box -->
    <EditText
        android:id="@+id/et_ingredient_weight"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:hint="@string/quantity"
        android:inputType="text"
        android:textSize="16sp"
        android:background="@drawable/edittext_rounded"
        android:padding="8dp"
        android:textColorHint="@color/neutral40Color"
        android:layout_marginEnd="8dp"/>

    <!-- Add/Delete Button -->
    <ImageButton
        android:id="@+id/btn_add_delete_ingredient"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_weight="0.2"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_minus_border"
        android:contentDescription="@string/add_remove_ingredient"
        app:tint="@color/neutral90Color" />
</LinearLayout>